changed href to css file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Oh, The Things I Could Make (Someday)</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=Thasadith:400,700" rel="stylesheet">
 </head>
 
