add and reorg files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Oh, The Things I Could Make (Someday)</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=Thasadith:400,700" rel="stylesheet">
 </head>
 
@@ -16,13 +17,13 @@
     </a>
   </header>
 
-<section id="menu">
-  <div>
-    <h3 id="menu-id">My Thoughts in Blog Form</h3>
-    <ul>
-      <li><a class="a-menu" href="blog.html">Recent Blog</a></li>
-    </ul>
-  </div>
+  <section id="menu">
+      <div>
+        <h3 class="menu-id">My Thoughts in Blog Form</h3>
+        <ul>
+          <li><a class="a-menu"href="blog.html">Blog Entries</a></li>
+        </ul>
+      </div>
 
   <div>
     <h3 id="menu-id">Completed Projects</h3>
@@ -34,21 +35,20 @@
 
 
   <div>
-    <h3 id="menu-id">To-Do</h3>
-    <ul>
-        <li><a class="a-menu" href="tech.html">Techy Stuff</a></li>
-        <li><a class="a-menu" href="sewing.html">Sewing</a></li>
-    </ul>
-  </div>
+      <h3 class="menu-id">To-Do</h3>
+      <ul>
+          <li><a class="a-menu" href="to-do.html">The Never Ending Project List</a></li>
+      </ul>
+    </div>
 
-  <div>
-    <h3 id="menu-id">About</h3>
-    <ul>
-      <li><a class="a-menu" href="about.html">About</li>
-      <li><a class="a-menu" href="followme.html">Follow Me</a></li>
-    </ul>
-  </div>
-  </section>
+    <div>
+        <h3 class="menu-id">Social Media</h3>
+        <ul>
+          <li><a class="a-menu" href="follow-me.html">Follow Me</a></li>
+        </ul>
+      </div>
+      
+    </section>
 
   <footer>
   </footer>
