--- a/to-do.html
+++ b/to-do.html
@@ -14,7 +14,7 @@
 
   <header class="header"><a class="header-menu" href="index.html">
         <h1>Oh, the Things I Could Make (Someday)</h1>
-        <h2>The Master Procrastinator's Blog</h2>
+        <h2>The Master Procrastinator's To-Do List</h2>
         </a>
   </header>
 
@@ -44,17 +44,18 @@
   
     <div>
         <h3 class="menu-id">Social Media</h3>
-        <ul>
-            <li><a class="a-menu" href="follow-me.html">Follow Me</a></li>
-        </ul>
+            <ul>
+              <li><a class="a-menu" href="follow-me.html">Follow Me</a></li>
+            </ul>
     </div>
     
     </section>
   
     <section class="blog">
-      <h2>Some Sewing Projects</h2>
+      <h2>Projects of Interest</h2>
       <p>
-        Some pictures and text of very basic sewing projects. Basic, but well on my way to making clothes...eventually.
+        Next eventual projects are a simple dress and bag for sewing projects. For furniture, I'm thinking a simple end table for the living room.
+      <p>We shall see.</p>
       </p>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
