--- a/to-do.html
+++ b/to-do.html
@@ -27,6 +27,7 @@
       </a>
     </div>
 
+    <div class="ctr-nav">
     <nav class ="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 
       <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
@@ -61,6 +62,7 @@
           </li>
 
         </ul>
+      </div>
       </div>
 
     </nav>
