--- a/follow-me.html
+++ b/follow-me.html
@@ -18,14 +18,13 @@
 
 <body>
 
-    <div id="wrapper">
-
-    <div class="header">
+     <div>
         <a class="header-home" href="index.html">
-        <h1>The Master Procrastinator</h1>
-          <p>A Guide to Finding Crafty Energy Instead of Doing It Later</p>
+        <h1 class="header">The Procrastinating Crafter</h1>
+          <h2 class ="subheader">Crafting Things Now Instead of Doing It Later</h2>
       </a>
     </div>
+
 
     <nav class ="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 
@@ -64,19 +63,17 @@
       </div>
 
     </nav>
-
-      <div id="content">
+    <div id="wrapper">
+      <div id="sm-content">
         <h1>Follow Me on Social Media</h1>
         <p><a href="www.facebook.com">Facebook</a></p>
         <p><a href="www.twitter.com">Twitter</a></p>
         <p><a href="www.instagram.com">Instagram</a></p>
       </div>
-          
-      <footer class="footer">
-          <p>Footer here.</p>
-      </footer>
-
-  </div> 
-
+	</div> 
+    
+    <footer class="footer">
+        <p>Copyright 2016 | B. C.</p>
+    </footer>
 </body>
 </html>
