--- a/furniture.html
+++ b/furniture.html
@@ -18,14 +18,13 @@
 
 <body>
 
-  <div id="wrapper">
-
-    <div class="header">
+     <div>
         <a class="header-home" href="index.html">
-        <h1>The Master Procrastinator</h1>
-          <p>A Guide to Finding Crafty Energy Instead of Doing It Later</p>
+        <h1 class="header">The Procrastinating Crafter</h1>
+          <h2 class ="subheader">Crafting Things Now Instead of Doing It Later</h2>
       </a>
     </div>
+
 
     <nav class ="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 
@@ -64,9 +63,9 @@
       </div>
 
     </nav>
-
-    <div id="content">
-      <h1>Furniture Projects</h1>
+  <div id="wrapper">
+   
+      <h1>Completed Furniture Projects</h1>
       <p>
         Completed furniture for the home. Sometimes, it's easier, more practical, and more fun to simply make the things you want for your home instead of being in the too-peoplely world and shopping for them. An introvert's dream.
       </p>
@@ -103,13 +102,11 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
 
-    </div>
-
-    <footer class="footer">
-        <p>Footer here.</p>
-    </footer>
-
   </div>
 
+    <footer class="footer">
+        <p>Copyright 2016 | B. C.</p>
+    </footer>
+  
 </body>
 </html>
