--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
   </head>
 
   <body>
-    <div id="wrapper">
-
-    <div class="header">
+     <div>
         <a class="header-home" href="index.html">
-        <h1>The Master Procrastinator</h1>
-          <p>A Guide to Finding Crafty Energy Instead of Doing It Later</p>
+        <h1 class="header">The Procrastinating Crafter</h1>
+          <h2 class ="subheader">Crafting Things Now Instead of Doing It Later</h2>
       </a>
     </div>
 
@@ -63,8 +61,9 @@
       </div>
 
     </nav>
-  
-    <div id="content">
+    
+    <div id="wrapper">
+ 
       <h1>About</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -109,10 +108,10 @@
   </div>
 
     <footer class="footer">
-        <p>Footer here.</p>
+        <p>Copyright 2016 | B. C.</p>
     </footer>
 
-  </div>
+ 
 
       <!-- Optional JavaScript -->
       <!--</script>-->
