--- a/sewing.html
+++ b/sewing.html
@@ -18,14 +18,12 @@
 
 <body>
 
-  <div id="wrapper">
-
-      <div class="header">
-          <a class="header-home" href="index.html">
-          <h1>The Master Procrastinator</h1>
-            <p>A Guide to Finding Crafty Energy Instead of Doing It Later</p>
-        </a>
-      </div>
+       <div>
+        <a class="header-home" href="index.html">
+        <h1 class="header">The Procrastinating Crafter</h1>
+          <h2 class ="subheader">Crafting Things Now Instead of Doing It Later</h2>
+      </a>
+    </div>
 
     <nav class ="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 
@@ -64,9 +62,8 @@
       </div>
 
     </nav>
-
-    <div id="content">
-        <h1>Completed Sewing Projects</h1>
+    <div id="wrapper">
+      <h1>Completed Sewing Projects</h1>
 
       <p>
         Some pictures and text of very basic sewing projects. Basic, but well on my way to making clothes...eventually.
@@ -104,13 +101,11 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
 
-    </div>
-
+  </div>
+  
     <footer class="footer">
-        <p>Footer here.</p>
+        <p>Copyright 2016 | B. C.</p>
     </footer>
 
-  </div>
-    
   </body>
 </html>
