--- a/to-do.html
+++ b/to-do.html
@@ -18,12 +18,10 @@
 
 <body>
 
-    <div id="wrapper">
-
-    <div class="header">
+     <div>
         <a class="header-home" href="index.html">
-        <h1>The Master Procrastinator</h1>
-          <p>A Guide to Finding Crafty Energy Instead of Doing It Later</p>
+        <h1 class="header">The Procrastinating Crafter</h1>
+          <h2 class ="subheader">Crafting Things Now Instead of Doing It Later</h2>
       </a>
     </div>
 
@@ -67,7 +65,8 @@
 
     </nav>
     
-    <div id=content>
+	<div id="wrapper">
+
       <h1>Projects of Interest</h1>
       <p>
         Next eventual projects are a simple dress and bag for sewing projects. For furniture, I'm thinking a simple end table for the living room. We shall see.</p>
@@ -104,14 +103,13 @@
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
-      
-    </div>
 
-  <footer class="footer">
-      <p>Footer here.</p>
-  </footer>
-
-  </div>
+	</div>
+	
+    <footer class="footer">
+        <p>Copyright 2016 | B. C.</p>
+    </footer>
+	
 </body>
 </html>
 
